# 3.semesterprojekt

./: .gitignore  README.md
cartographer/carto_cfg/: ld08_2d.lua
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tb3_remote_control/lib/tb3_remote_control/: drive_forward_10cm  file
install/tb3_remote_control/share/tb3_remote_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tb3_remote_control/share/tb3_remote_control/launch/: drive_forward.launch.py
log/: latest_build
ros2_ws/: cartographer_ld08.launch.py  frames_2025-10-29_12.30.43.gv  frames_2025-10-29_12.35.18.gv  frames_2025-11-05_10.35.52.gv  frames_2025-11-05_10.36.35.gv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ld08_cartographer_demo/share/ld08_cartographer_demo/: local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
ros2_ws/install/ld08_cartographer_demo/share/ld08_cartographer_demo/cmake/: ld08_cartographer_demoConfig.cmake
ros2_ws/install/ld08_cartographer_demo/share/ld08_cartographer_demo/launch/: full.launch.py
ros2_ws/install/ld08_driver/lib/ld08_driver/: ld08_driver
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/ld08_cartographer_demo/: CMakeLists.txt
src/tb3_remote_control/: setup.cfg  setup.py
src/tb3_remote_control/TB3 scripts/: record_server.py
src/tb3_remote_control/tb3_remote_control/: audio_drive.py  drive_forward_10cm.py  file.py  streamAudio.py  streamAudioWrt.py
src/tb3_remote_control/tb3_scripts/: record_server.py
(+17 files in other folders)
